--- a/src/App.css
+++ b/src/App.css
@@ -3286,6 +3286,15 @@ a.back-to-top:hover span {
   color: rgb(156 163 175 / var(--tw-text-opacity)) /* #9ca3af */;
 }
 
+.cart {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+:is(.sticky .cart ) {
+  --tw-text-opacity: 1;
+  color: rgb(17 25 40 / var(--tw-text-opacity));
+}
 
 :is(.dark .sticky .cart ) {
   --tw-text-opacity: 1;
