--- a/src/App.css
+++ b/src/App.css
@@ -3306,4 +3306,24 @@ a.back-to-top:hover span {
   color: rgb(234 88 12 / var(--tw-text-opacity));
 }
 
+.cart-page {
+  --tw-text-opacity: 1;
+  color: rgb(17 25 40  / var(--tw-text-opacity));
+}
+
+:is(.sticky .cart-page ) {
+  --tw-text-opacity: 1;
+  color: rgb(17 25 40 / var(--tw-text-opacity));
+}
+
+:is(.dark .sticky .cart-page ) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+:is(.dark .sticky:hover .cart-page) {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+
 /* Custom End */
