update interface dashboard and salesstaff

--- a/src/pages/manager/index.css
+++ b/src/pages/manager/index.css
@@ -26,7 +26,11 @@
   .w-full {
     width: 100%;
   }
-  
+  .custom-table-header {
+    font-size: 22px; /* Kích thước chữ lớn hơn */
+    font-family: 'Arial', monospace; /* Thay đổi font family */
+    font-weight: bold; /* In đậm */
+  }
   /* Phong cách cho bảng */
   .ant-table {
     border-radius: 8px;
@@ -43,6 +47,8 @@
   
   .ant-table-tbody > tr > td {
     text-align: center;
+    font-size: 18px;
+    font-family: 'Arial', monospace;
   }
   
   .ant-table-tbody > tr:hover > td {
