--- a/src/components/dashboard/index.css
+++ b/src/components/dashboard/index.css
@@ -111,3 +111,11 @@ button.ant-btn {
     background-color: #e6f7ff;
     border-color: #40a9ff;
   }
+
+  .ant-menu-item.ant-menu-item-selected{
+    color: #fff !important;
+  }
+
+  .ant-menu-item-icon svg{
+    color: rgb(55 65 81 / var(--tw-text-opacity)) !important
+  }
