--- a/src/components/dashboard/index.css
+++ b/src/components/dashboard/index.css
@@ -112,10 +112,10 @@ button.ant-btn {
     border-color: #40a9ff;
   }
 
-  .ant-menu-item.ant-menu-item-selected{
+  /* .ant-menu-item.ant-menu-item-selected{
     color: #fff !important;
   }
 
   .ant-menu-item-icon svg{
     color: rgb(55 65 81 / var(--tw-text-opacity)) !important
-  }
+  } */
